syntax = "proto3";

package rys.ajaxpetproject.request.message.create.proto;

import "commonmodels/message/message.proto";
import "commonmodels/error/error.proto";

option java_multiple_files = true;

message MessageCreateRequest {
  commonmodels.message.proto.Message message = 1;
  string chatId = 2;
}

message MessageCreateResponse {

  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    string result = 1;
  }

  message Failure {
    optional string message = 1;
    commonmodels.error.proto.Error error = 2;

  }
}

